Move CATALINA_OPTS to deployment.yaml from Dockerfile